--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,14 @@ android:
     - build-tools-21.1.1
     - android-21
 
+env:
+  - TRAVIS_CI_BUILD=true
+
 script:
+  # Build .apk file and build docker image
   - docker/build
+
+  # Androd + Docker currently not supported by Travis CI
+  ## Log in to Docker Hub and push the image we've just build
   #- docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  #- docker pull hannesd/amos-downloader-image:1.0
-  #- docker build -t hannesd/hannes-android-app-downloader:1.0 docker/
-  #- docker push hannesd/hannes-android-app-downloader:1.0
+  #- docker push osrgroup/android-app-example-project:1.0
