--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,20 @@
 
-language: android
-group: stable
-dist: trusty
-
 sudo: required
 
 services:
   - docker
 
-android:
-  components:
-    - platform-tools
-    - tools
-    - build-tools-21.1.1
-    - android-21
-
 env:
   - TRAVIS_CI_BUILD=true
 
 script:
-  # Build .apk file and build docker image
-  - docker/build
+  # Build .apk file and build docker image (inside docker container)
+  - docker run --rm -v $(pwd)/:/build -w /build -e TRAVIS_CI_BUILD osrgroup/amos-android-build-image:1.0 docker/build
 
-  # Androd + Docker currently not supported by Travis CI
-  ## Log in to Docker Hub and push the image we've just build
-  #- docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  #- docker push osrgroup/android-app-example-project:1.0
+  # Build docker image
+  # --pull: Make sure that the newest version of the base image is always pulled
+  - docker build --pull -t osrgroup/android-app-example-project:1.0 docker/
+
+  # Log in to Docker Hub and push the image we've just build
+  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - docker push osrgroup/android-app-example-project:1.0
